# rron

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  flake.nix  schema.json
.chglog/: CHANGELOG.tpl.md  RELEASE.tpl.md  config.yml
.github/workflows/: release.yml
example/: rron.toml
src/: command.rs  config.rs  errors.rs  main.rs  process.rs
