[package]
name = "rron"
version = "0.2.0"
edition = "2021"
authors = ["Antoine Langlois <dev@antoine-langlois.net>"]
description = "Rust scheduler with either crontab or human readable duration"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "string"] }
cron = "0.12"
env_logger = "0.11"
hifitime = "4.0"
home = "0.5"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
toml = "0.8"
